--- a/src/app/components/product-list/product-list-table.component.html
+++ b/src/app/components/product-list/product-list-table.component.html
@@ -1,6 +1,7 @@
 <table class="table table-hover table-bordered shadow-sm rounded bg-light">
     <thead class="table-success text-center">
         <tr>
+            <th scope="col"></th>
             <th scope="col">🍵 Name</th>
             <th scope="col">💲  Price</th>
             <th scope="col">📦 Units in Stock</th>
@@ -8,9 +9,15 @@
     </thead>
     <tbody>
         <tr *ngFor="let tempProduct of products">
-            <td class="fw-semibold text-tea-green">{{ tempProduct.name}}</td>
-            <td class="text-center text-success fw-bold">{{ tempProduct.unitPrice | currency:'USD'}}</td>
-            <td class="text-center">
+            <td class="align-middle fw-semibold text-tea-green d-flex align-items-center">
+                <img [src]="tempProduct.imageUrl" 
+                [height]="70" class="img-fluid" 
+                class="img-thumbnail me-2"
+                style="width: 40px; height: 40px; object-fit: cover; border: none;">
+            </td>
+            <td class="align-middle fw-semibold text-tea-green">{{ tempProduct.name}}</td>
+            <td class="align-middle text-center text-success fw-bold">{{ tempProduct.unitPrice | currency:'USD'}}</td>
+            <td class="align-middle text-center">
                 <span class="badge bg-dark bg-success" *ngIf="tempProduct.unitsInStock > 0">
                     ✅{{ tempProduct.unitsInStock }} Units
                 </span>
