--- a/src/app/components/product-list/product-list-table.component.html
+++ b/src/app/components/product-list/product-list-table.component.html
@@ -11,7 +11,7 @@
         <tr *ngFor="let tempProduct of products">
             <td class="align-middle fw-semibold text-tea-green d-flex align-items-center">
                 <img [src]="tempProduct.imageUrl" 
-                [height]="70" class="img-fluid" 
+                height="70" 
                 class="img-thumbnail me-2"
                 style="width: 40px; height: 40px; object-fit: cover; border: none;">
             </td>
