--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
       <a href="home.html">
         <img
           src="assets/images/logo.png"
-          alt="ostfrieslandteeshop"
+          alt="Ostfriesische Tee"
           class="img-responsive"
         />
       </a>
