update new category in app.component.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,16 +14,19 @@
       <nav class="navbar-sidebar">
         <ul class="list-unstyled navbar-list">
           <li>
-            <a href="home.html">Books</a>
+            <a href="home.html">Black Teas</a>
           </li>
           <li>
-            <a href="home.html">Coffee Mugs</a>
+            <a href="home.html">Tea cups</a>
           </li>
           <li>
-            <a href="home.html">Mouse Pads</a>
+            <a href="home.html">Incenses</a>
           </li>
           <li>
-            <a href="home.html">Luggage Tags</a>
+            <a href="home.html">Essential Oils</a>
+          </li>
+          <li>
+            <a href="home.html">Honeys</a>
           </li>
         </ul>
       </nav>
