--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,19 +14,19 @@
       <nav class="navbar-sidebar">
         <ul class="list-unstyled navbar-list">
           <li>
-            <a href="home.html">Black Teas</a>
+            <a routerLink="/category/1" routerLinkActive="active-link">Black Teas</a>
           </li>
           <li>
-            <a href="home.html">Tea cups</a>
+            <a routerLink="/category/2" routerLinkActive="active-link">Tea cups</a>
           </li>
           <li>
-            <a href="home.html">Incenses</a>
+            <a routerLink="/category/3" routerLinkActive="active-link">Incenses</a>
           </li>
           <li>
-            <a href="home.html">Essential Oils</a>
+            <a routerLink="/category/4" routerLinkActive="active-link">Essential Oils</a>
           </li>
           <li>
-            <a href="home.html">Honeys</a>
+            <a routerLink="/category/5" routerLinkActive="active-link">Honeys</a>
           </li>
         </ul>
       </nav>
@@ -63,7 +63,9 @@
     <!-- END HEADER DESKTOP-->
 
     <!-- MAIN CONTENT-->
-    <app-product-list></app-product-list>
+
+    <router-outlet></router-outlet>
+    <!-- <app-product-list></app-product-list> -->
   </div>
 </div>
 
