update menu component is dynamic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,10 @@
         />
       </a>
     </div>
-    <div class="menu-sidebar-content js-scrollbar1">
+
+     <app-product-category-menu></app-product-category-menu>
+   <!--  hard coded menu sidebar 
+     <div class="menu-sidebar-content js-scrollbar1">
       <nav class="navbar-sidebar">
         <ul class="list-unstyled navbar-list">
           <li>
@@ -30,7 +33,7 @@
           </li>
         </ul>
       </nav>
-    </div>
+    </div>  -->
   </aside>
 
   <!-- PAGE CONTAINER-->
