--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,1 +1,12 @@
-<p>search works!</p>
+<form class="form-header">
+
+  <input #myInput
+    class="au-input au-input-xl"
+    type="text"
+    placeholder="Search for products ..."
+    (keyup.enter)="doSearch(myInput.value)"
+  />
+
+  <button (click)="doSearch(myInput.value)" class="au-btn-submit">Search</button>
+
+</form>
