update app.module BIG PROBLEM WITH PATH

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,4 +1,4 @@
-<form class="form-header">
+<div class="form-header">
 
   <input #myInput
     class="au-input au-input-xl"
@@ -9,4 +9,4 @@
 
   <button (click)="doSearch(myInput.value)" class="au-btn-submit">Search</button>
 
-</form>
+</div>
