--- a/src/styles.css
+++ b/src/styles.css
@@ -722,6 +722,11 @@ table.table.table-bordered th{
 .detail-section{
     margin-top:60px
 }
+
+.detail-img{
+    margin-top:30px;
+    width: 30%;
+}
 /**/
 
 /* 
