--- a/src/app/components/product-list/product-list-grid.component.html
+++ b/src/app/components/product-list/product-list-grid.component.html
@@ -41,6 +41,16 @@
                                         
                                     </ngb-pagination>
                                 </div>
+                                <div  class="col-md-3 mt-2" style="text-align: right;">
+                                    <span class="mr-2">Page size</span>
+
+                                    <select #myPageSelect (change)="updatePageSize(myPageSelect.value)">
+                                        <option selected="true">2</option>
+                                        <option>4</option>
+                                        <option>8</option>
+                                        <option>16</option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
                     
