--- a/src/app/components/cart-details/cart-details.component.html
+++ b/src/app/components/cart-details/cart-details.component.html
@@ -44,6 +44,8 @@
                 </div>
               </div>
 
+              <button (click)="remove(tempCartItem)" class="btn btn-warning btn-sm mt-2">Remove</button>
+
               <p class="mt-2">
                 Subtotal:
                 {{
