delete wrong files new checkout.component update app.module.ts cart-details.component.html

--- a/src/app/components/cart-details/cart-details.component.html
+++ b/src/app/components/cart-details/cart-details.component.html
@@ -78,6 +78,11 @@
               <td colspan="2" class="text-end fw-bold">Total Price:</td>
               <td>{{ totalPrice | currency : "USD" }}</td>
             </tr>
+            <tr>
+                <a routerLink ="/checkout" class="btn btn-primary btn-lg w-100 mt-3">
+                  Proceed to Checkout 🛒
+                </a>  
+            </tr>
           </tfoot>
         </table>
       </div>
