--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -200,7 +200,7 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="expirationMonth">
-                                    <option>TO DO</option>
+                                    <option *ngFor="let month of creditCardMonths">{{month}}</option>
                                 </select>
                             </div>
                         </div>
@@ -211,7 +211,7 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="expirationYear">
-                                    <option>TO DO</option>
+                                    <option *ngFor="let year of creditCardYears">{{year}}</option>
                                 </select>
                             </div>
                         </div>
