--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -11,6 +11,19 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="firstName" type="text">
+                                <div *ngIf="firstName?.invalid && (firstName?.dirty || firstName?.touched)" class="alert alert-danger mt-1">   
+                                    <div *ngIf="firstName?.errors?.['required']">
+                                        First Name is required
+                                    </div>
+
+                                    <div *ngIf="firstName?.errors?.['minLength']">
+                                        First Name must be at least 2 characters long
+                                    </div>
+
+                                    <div *ngIf="firstName?.errors?.['maxLength']">
+                                        First Name must be at most 20 characters long
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
