--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -33,6 +33,19 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="lastName" type="text">
+                                <div *ngIf="lastName?.invalid && (lastName?.dirty || lastName?.touched)" class="alert alert-danger mt-1">   
+                                    <div *ngIf="lastName?.errors?.['required']">
+                                        Last Name is required
+                                    </div>
+
+                                    <div *ngIf="lastName?.errors?.['minLength']">
+                                        Last Name must be at least 2 characters long
+                                    </div>
+
+                                    <div *ngIf="lastName?.errors?.['maxLength']">
+                                        Last Name must be at most 20 characters long
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -42,6 +55,15 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="email" type="text">
+                                <div *ngIf="email?.invalid && (email?.dirty || email?.touched)" class="alert alert-danger mt-1">   
+                                    <div *ngIf="email?.errors?.['required']">
+                                        Email is required
+                                    </div>
+
+                                    <div *ngIf="email?.errors?.['pattern']">
+                                        Email must be a valid address format
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
