--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -177,6 +177,13 @@
                                         {{country.name}}
                                     </option>
                                 </select>
+
+                                <div *ngIf="billingAddressCountry?.invalid && (billingAddressCountry?.dirty || billingAddressCountry?.touched)" class="alert alert-danger mt-1">   
+                                    <div *ngIf="billingAddressCountry?.errors?.['required']">
+                                        Country is required
+                                    </div>
+                                </div>
+                                
                             </div>
                         </div>
                     </div>
