--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -183,7 +183,7 @@
                                         Country is required
                                     </div>
                                 </div>
-                                
+
                             </div>
                         </div>
                     </div>
@@ -193,6 +193,11 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="street" type="text">
+                                <div *ngIf="billingAddressStreet?.invalid && (billingAddressStreet?.dirty || billingAddressStreet?.touched)" class="alert alert-danger mt-1">   
+                                    <div *ngIf="billingAddressStreet?.errors?.['required'] || billingAddressStreet?.errors?.['notOnlyWhitespace']">
+                                        Street is required
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -202,6 +207,11 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="city" type="text">
+                                <div *ngIf="billingAddressCity?.invalid && (billingAddressCity?.dirty || billingAddressCity?.touched)" class="alert alert-danger mt-1">   
+                                    <div *ngIf="billingAddressCity?.errors?.['required'] || billingAddressCity?.errors?.['notOnlyWhitespace']">
+                                        City is required
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -215,6 +225,12 @@
                                         {{region.name}}
                                     </option>
                                 </select>
+
+                                <div *ngIf="billingAddressRegion?.invalid && (billingAddressRegion?.dirty || billingAddressRegion?.touched)" class="alert alert-danger mt-1">   
+                                    <div *ngIf="billingAddressRegion?.errors?.['required'] || billingAddressRegion?.errors?.['notOnlyWhitespace']">
+                                        Region is required
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -224,6 +240,11 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="zipCode" type="text">
+                                <div *ngIf="billingAddressZipCode?.invalid && (billingAddressZipCode?.dirty || billingAddressZipCode?.touched)" class="alert alert-danger mt-1">   
+                                    <div *ngIf="billingAddressZipCode?.errors?.['required'] || billingAddressZipCode?.errors?.['notOnlyWhitespace']">
+                                        Zip code is required
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
