--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -88,6 +88,9 @@
                                     <div *ngIf="shippingAddressCountry?.errors?.['required']">
                                         Country is required
                                     </div>
+                                    <div *ngIf="shippingAddressCountry?.errors?.['minlength']">
+                                        Country must be at least 2 characters long
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -102,6 +105,9 @@
                                     <div *ngIf="shippingAddressStreet?.errors?.['required'] || shippingAddressStreet?.errors?.['notOnlyWhitespace']">
                                         Street is required
                                     </div>
+                                    <div *ngIf="shippingAddressStreet?.errors?.['minlength']">
+                                        Street must be at least 2 characters long
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -115,6 +121,9 @@
                                 <div *ngIf="shippingAddressCity?.invalid && (shippingAddressCity?.dirty || shippingAddressCity?.touched)" class="alert alert-danger mt-1">   
                                     <div *ngIf="shippingAddressCity?.errors?.['required'] || shippingAddressCity?.errors?.['notOnlyWhitespace']">
                                         City is required
+                                    </div>
+                                    <div *ngIf="shippingAddressCity?.errors?.['minlength']">
+                                        City must be at least 2 characters long
                                     </div>
                                 </div>
                             </div>
@@ -135,6 +144,9 @@
                                     <div *ngIf="shippingAddressRegion?.errors?.['required']">
                                         Region is required
                                     </div>
+                                    <div *ngIf="shippingAddressRegion?.errors?.['minlength']">
+                                        Region must be at least 2 characters long
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -148,6 +160,9 @@
                                 <div *ngIf="shippingAddressZipCode?.invalid && (shippingAddressZipCode?.dirty || shippingAddressZipCode?.touched)" class="alert alert-danger mt-1">   
                                     <div *ngIf="shippingAddressZipCode?.errors?.['required'] || shippingAddressZipCode?.errors?.['notOnlyWhitespace']">
                                         Zip code is required
+                                    </div>
+                                    <div *ngIf="shippingAddressZipCode?.errors?.['minlength']">
+                                        At least 2 characters are required!
                                     </div>
                                 </div>
                             </div>
@@ -182,6 +197,9 @@
                                     <div *ngIf="billingAddressCountry?.errors?.['required']">
                                         Country is required
                                     </div>
+                                    <div *ngIf="billingAddressCountry?.errors?.['minlength']">
+                                        Country must be at least 2 characters long
+                                    </div>
                                 </div>
 
                             </div>
@@ -197,6 +215,9 @@
                                     <div *ngIf="billingAddressStreet?.errors?.['required'] || billingAddressStreet?.errors?.['notOnlyWhitespace']">
                                         Street is required
                                     </div>
+                                    <div *ngIf="billingAddressCity?.errors?.['minlength']">
+                                        Street must be at least 2 characters long
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -210,6 +231,9 @@
                                 <div *ngIf="billingAddressCity?.invalid && (billingAddressCity?.dirty || billingAddressCity?.touched)" class="alert alert-danger mt-1">   
                                     <div *ngIf="billingAddressCity?.errors?.['required'] || billingAddressCity?.errors?.['notOnlyWhitespace']">
                                         City is required
+                                    </div>
+                                    <div *ngIf="billingAddressCity?.errors?.['minlength']">
+                                        City must be at least 2 characters long
                                     </div>
                                 </div>
                             </div>
@@ -243,6 +267,18 @@
                                 <div *ngIf="billingAddressZipCode?.invalid && (billingAddressZipCode?.dirty || billingAddressZipCode?.touched)" class="alert alert-danger mt-1">   
                                     <div *ngIf="billingAddressZipCode?.errors?.['required'] || billingAddressZipCode?.errors?.['notOnlyWhitespace']">
                                         Zip code is required
+                                    </div>
+
+                                    <div *ngIf="billingAddressZipCode?.errors?.['minlength']">
+                                        At least 2 characters are required!
+                                    </div>
+
+                                    <div *ngIf="billingAddressZipCode?.errors?.['minlength']">
+                                        Zip code must be at least 2 characters long
+                                    </div>
+
+                                    <div *ngIf="billingAddressZipCode?.errors?.['maxlength']">
+                                        Zip code must be at most 8 characters long
                                     </div>
                                 </div>
                             </div>
