--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -162,7 +162,7 @@
                                         Zip code is required
                                     </div>
                                     <div *ngIf="shippingAddressZipCode?.errors?.['minlength']">
-                                        At least 2 characters are required!
+                                        Zip code must be at least 2 characters long!
                                     </div>
                                 </div>
                             </div>
@@ -267,10 +267,6 @@
                                 <div *ngIf="billingAddressZipCode?.invalid && (billingAddressZipCode?.dirty || billingAddressZipCode?.touched)" class="alert alert-danger mt-1">   
                                     <div *ngIf="billingAddressZipCode?.errors?.['required'] || billingAddressZipCode?.errors?.['notOnlyWhitespace']">
                                         Zip code is required
-                                    </div>
-
-                                    <div *ngIf="billingAddressZipCode?.errors?.['minlength']">
-                                        At least 2 characters are required!
                                     </div>
 
                                     <div *ngIf="billingAddressZipCode?.errors?.['minlength']">
