specify validaion rules for controls define getter methods to access these forms

--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -215,7 +215,7 @@
                                     <div *ngIf="billingAddressStreet?.errors?.['required'] || billingAddressStreet?.errors?.['notOnlyWhitespace']">
                                         Street is required
                                     </div>
-                                    <div *ngIf="billingAddressCity?.errors?.['minlength']">
+                                    <div *ngIf="billingAddressStreet?.errors?.['minlength']">
                                         Street must be at least 2 characters long
                                     </div>
                                 </div>
