--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,6 +46,8 @@
 
             <app-search></app-search>
 
+            <app-login-status></app-login-status>
+
             <app-cart-status></app-cart-status>
 
             <!--
@@ -75,6 +77,20 @@
       </div>
     </header>
     <!-- END HEADER DESKTOP-->
+
+    <!-- ✅ HEADER MOBILE - PRIDANÉ PRE MOBIL -->
+    <header class="header-mobile d-block d-lg-none">
+      <div class="section-content section-content-p30">
+        <div class="container-fluid">
+          <div class="header-wrap">
+            <app-search></app-search>
+            <app-login-status></app-login-status>
+            <app-cart-status></app-cart-status>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- END HEADER MOBILE-->
 
     <!-- MAIN CONTENT-->
 
